# arm-cortexm-cmake-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  atmel_start_pins.h  driver_init.c  submoduleconfig.py
AT-SAMC2x/: CMakeLists.txt
BSP/: README.md
BSP/Atmel/AT-SAMC2x/: CMakeLists.txt.user.9b9ae7d.4.8-pre1
BSP/Atmel/AT-SAMC2x/gcc/: Makefile
BSP/Atmel/SAMD21/hpl/pm/: hpl_pm.c
BSP/Atmel/SAMD21/hpl/usb/: hpl_usb.c
BSP/Atmel/SAME51/: README.md
BSP/Atmel/SAME51/hpl/tc/: hpl_tc.c
BSP/Atmel/SAME51_booloader/Config/: RTE_Components.h  hpl_gclk_config.h  hpl_osc32kctrl_config.h  hpl_oscctrl_config.h  hpl_sercom_config.h  peripheral_clk_config.h
BSP/Atmel/SAME51_booloader/examples/: driver_examples.c  driver_examples.h
BSP/ST/F4/ST-F401RE/: f401re.ioc
BSP/ST/F7/ST-F746g/f746pro/Core/Inc/: FreeRTOSConfig.h
BSP/ST/F7/ST-F746g/f746pro/Core/Src/: main.c  stm32f7xx_hal_msp.c
BSP/ST/ST-F401RE/f401re/: .mxproject
BSP/ST/ST-F746g/f746pro/: .mxproject
BSP/ST/ST-F746g/f746pro/RTT/SEGGER/: SEGGER_RTT.h
Example/: .gitignore
Example/rp2040/: configure.sn
Example/sam-bootloader/: CMakeLists.txt
Example/sam-bootloader/inc/: uf2_version.h
Example/sam-bootloader/src/: main.c  sam_ba_monitor.c
Example/samd21/: CMakeLists.txt  FreeRTOSConfig.h  dma_example.c  driver_init.c  family.c  msc_disk.c  samd21.jdebug  samd21g18a_flash.ld  serial.py  tusb_config.h  usb_cdc_echo_main.c  usb_descriptor.c  usb_descriptors.c  usb_start.c  xiao.jdebug
Example/samd21/config/: peripheral_clk_config.h
Example/samd21/driver/: adc.c  adc.h  clock.c  clock.h  dma.c  dma.h  flash.c  flash.h  i2c.c  i2c.h  spi.c  spi.h  uart.c  usb_cdc.h
Example/samd21/example/: CMakeLists.txt  crc.c  uart_polling.c  usb.c
Example/samd21/serial/minimal/: minimal.h  version.h
Example/sensorhub/: CMakeLists.txt  port.py
Example/sensorhub/examples/device/cdc_msc_freertos/src/: FreeRTOSConfig.h  main.c  msc_disk.c
Example/sensorhub/hw/bsp/samd21/: family.c
Example/sensorhub/hw/bsp/samd21/boards/atsamd21_xpro/: board.h
Example/sensorhub/src/portable/microchip/samd/: dcd_samd.c
Example/sensortile/: CMakeCache.txt  configure.bat  configure.sn
Example/sensortile/DataLog/: CMakeLists.txt
Example/sensortile/DataLog/Inc/: main.h
Example/sensortile/DataLog/Src/: datalog_application.c
Example/sensortile/DataLog/others/: datalog_application.h  ffconf.h  hts221_settings.h  lsm303agr_settings.h  usbd_cdc_interface.h
Example/sensortile/DataLog/test/: sys_init.c  sys_init.h  test.c
Example/xiao/: CMakeLists.txt  CMakeSettings.json  FreeRTOSConfig.h  config.sh  main.c  readme.md  tusb_config.h  usb_descriptor.c  xiao.jdebug
Example/xiao/driver/: clock.c  clock.h  dma.h  i2c.h  pinconfig.h  spi.c  spi.h  uart.c  uart.h  usb_cdc.c
Example/xiao/hal/utils/include/: utils_assert.h
Example/xiao/hpl/pm/: hpl_pm_base.h
Example/xiao/hpl/port/: hpl_gpio_base.h
ST-F401RE/f401re/: CMakeLists.txt  Makefile
ST-F401RE/f401re/Core/Inc/: stm32f4xx_hal_conf.h
ST-F401RE/f401re/Core/Src/: main.c  stm32f4xx_hal_msp.c
ST-F401RE/f746pro/: .mxproject  Makefile  arm-none-eabi-gcc.cmake
ST-F401RE/f746pro/Core/Inc/: FreeRTOSConfig.h
ST-F401RE/f746pro/Core/Src/: main.c  stm32f7xx_hal_msp.c
ST-F401RE/f746pro/RTT/SEGGER/: SEGGER_RTT.h
ST-F746g/build-f746pro-Desktop_Qt_5_12_5_MinGW_32_bit-Debug/: CMakeCache.txt  Makefile  STM32F74-GDISCO.elf  STM32F74-GDISCO.hex  cmake_install.cmake
ST-F746g/f746pro/: .mxproject  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  Makefile  f746pro.ioc
ST-F746g/f746pro/Core/Src/: main.c
bootloader/: readme.md
build-AT-SAMC2x-cmake_arm_gcc-Debug/: CMakeCache.txt  Makefile  SAMC21.elf  SAMC21.hex  SAMC21.map  cmake_install.cmake
cmake/: arm-toolchain.cmake  bsp.cmake  erase.in  jlink.cmake  python.cmake  readme.md  uf2.cmake  utils.cmake
components/: readme.md
flash/: readme.md
flash/BMW_SEAT_1.0.0/: BMW_SEAT_flash.jlink
flash/xiao_1.0.0/: xiao_flash.jlink
projects/: CMakeLists.txt  configure.bat  configure.sn  readme.md
projects/DataLog/: CMakeLists.txt
projects/DataLog/Inc/: cube_hal.h  datalog_application.h
projects/DataLog/Src/: datalog_application.c
projects/DataLog/app/: main.c
projects/DataLog/others/: lps22hb_settings.h  lsm6dsm_settings.h
projects/DataLog/test/: test.c
projects/rp2040/: CMakeLists.txt  configure.sn
simulation/: .gitignore  CMakeLists.txt  config.sn  main.c  readme.md  stft.py
simulation/PythonWrapper/: config.py  dsputils_test.py  fir_test.py  plot.py  setup.py  simulation.py  stft.py  testrfft_fast.py
simulation/PythonWrapper/cmsisdsp_pkg/src/: cmsismodule.h
simulation/unit_test/: CMakeLists.txt  data_analysis_test.c  data_analysis_test2.c  hamming_window_test.c  stft_test.c
